Removed --add-modules code completely.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>