@@ -45,8 +45,6 @@ import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Project;
 import org.apache.tools.ant.types.Path;
 
-import java.lang.module.ModuleFinder;
-
 /**
  *
  * @author Kohsuke Kawaguchi
@@ -67,29 +65,6 @@ public class WsGen extends WsGenBase {
                 : System.getProperty("java.class.path");
 
         getCommandline().createClasspath(getProject()).append(new Path(getProject(), antcp));
-
-        boolean addModules = ModuleFinder.ofSystem().find("java.xml.ws").isPresent();
-        String[] args = getJavacargs().getArguments();
-        if (addModules) {
-            for (int i = 0; i < args.length; i++) {
-                if ("-source".equals(args[i]) && 9 >= getVersion(args[i++])) {
-                    addModules = false;
-                    break;
-                }
-                if ("-target".equals(args[i]) && 9 >= getVersion(args[i++])) {
-                    addModules = false;
-                    break;
-                }
-                if ("-release".equals(args[i]) && 9 >= getVersion(args[i++])) {
-                    addModules = false;
-                    break;
-                }
-            }
-        }
-
-        if (addModules) {
-            getCommandline().createVmArgument().setLine("--add-modules java.xml.ws");
-        }
 
         if (getModulepath() != null && getModulepath().size() > 0) {
             getCommandline().createModulepath(getProject()).add(getModulepath());
